Use the correct font sizes, margins and paddings on mobile

--- a/desktop/apps/buy_art/stylesheets/index.styl
+++ b/desktop/apps/buy_art/stylesheets/index.styl
@@ -165,6 +165,8 @@ figure
   background-size cover
   height 700px
   color white
+  display flex
+  align-items center
   position relative
   .icon-logotype
     font-size 35px
@@ -172,9 +174,6 @@ figure
     top 30px
     left 30px
   &__content
-    position absolute
-    top 50%
-    transform translateY(-50%)
   &__title
     garamond-size('xxl-headline', true)
     max-width 580px
